added documents functionality
